--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Statistics-Blog
-description: A Blog about explaining all different kinds of statistical topic.
+description: A Blog about explaining all different kinds of statistical topics.
 github_username: ChristopherTh
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "statistics-blog"
@@ -39,8 +39,8 @@ baseurl: "/statistics-blog" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: fastdotai
-    github: fastai
+    twitter: ChristopherTh92
+    github: ChristopherTh
 
 # Set this to true to get LaTeX math equation support
 use_math: true
